This commit updates the basket layout utilizing the nifty DockLayout in favor of the - also nifty, but less effective in this situation - StackLayouot. As a minor, but scrumptious, treat the ugly actionNavBar is now no longer visible on Android devies. Enjoy!

--- a/app/pages/basket/basket-line/basket-line.component.scss
+++ b/app/pages/basket/basket-line/basket-line.component.scss
@@ -1,4 +1,6 @@
 .basket__line {
+    z-index: 200;
+    
     .label {
         margin-left: 20px;
         font-size: 15px;
