--- a/app/pages/basket/basket.component.scss
+++ b/app/pages/basket/basket.component.scss
@@ -1,4 +1,5 @@
 .basket {
+    z-index: 200;
     width:100%;
     padding-top:20px;
     &__scrollview {
@@ -6,6 +7,7 @@
     }
     .basket-heading {
         font-size:40px;
+        margin-left:40px;
     }
 }
 
